# SHOT

./: .gitignore  .harper-dictionary.txt  .pre-commit-config.yaml  README.md  data  multinode.sh  pyproject.toml
configs/: decode_ot.yaml  hydra_defaults.yaml  shot_EPFL_MT0N1HDAS.yaml  shot_LiteLoc_NPC_U2OS.yaml
configs/camera/: EPFL.yaml  LiteLoc_NPC_U2OS.yaml
configs/dataset/: EPFL_MT0N1HDAS.yaml  LiteLoc_NPC_U2OS.yaml
configs/fluorescence/: EPFL_N1HD.yaml  LiteLoc_NPC_U2OS.yaml
configs/model/: shot.yaml  shot_lite.yaml
configs/psf/: EPFL_AS.yaml  LiteLoc_NPC_U2OS.yaml
configs/runtime/: default.yaml
configs/scheduler/: cosineannealing.yaml
configs/writer/: ash.yaml  csv.yaml
scripts/: export.py  test.py  train.py
src/smlmshot/: __init__.py
src/smlmshot/datasets/: __init__.py  images_and_activations.py  images_only.py  multiple_synthetic_scenes.py  one_synthetic_scene.py  simulate_scene.py
src/smlmshot/engine/: __init__.py  calibration.py  exportation.py  training.py  validation.py
src/smlmshot/losses/: __init__.py  bernoulli.py  gmm.py  ot.py
src/smlmshot/metrics/: __init__.py  epfl_challenge.py
src/smlmshot/models/: __init__.py  read.py  shot.py  shot_lite.py  simulator.py
src/smlmshot/simulation/: __init__.py
src/smlmshot/trainers/: __init__.py  decode.py  ot.py
src/smlmshot/utils/: __init__.py  activations.py  cache.py  checkpoint.py  config.py  dataloader.py  extent.py  format.py  images.py  maths.py  nested.py  periods.py  plot.py  precision_recall.py  profiler.py  random.py  (+2 more)
tests/: dynamics_test.py  ot_test.py  render_test.py
(+29 files in other folders)
